Bug 645998.  Improve the recursion detection in the CSS loader to detect mutual recursion scenarios.  r=sicking